# Website-Pekan-Banyumas

./: .gitignore  HANDOFF.md  docker-compose.yml
Peken-Banyumasan-Company-Profile/backend/: .coverage  .env.example  .gitignore  Dockerfile  Dockerfile.hf  README.md  package.json  pyproject.toml  requirements.txt
Peken-Banyumasan-Company-Profile/backend/app/: __init__.py  config.py  db.py  envelope.py  main.py  models.py
Peken-Banyumasan-Company-Profile/backend/app/api/: __init__.py
Peken-Banyumasan-Company-Profile/backend/app/core/: __init__.py  dependencies.py
Peken-Banyumasan-Company-Profile/backend/app/data/: profiles.py  programs.py  works.py
Peken-Banyumasan-Company-Profile/backend/app/domain/: __init__.py  artisan.py  base.py  company_profile_section.py  event.py  karya.py  kolaborator.py  program.py  story.py  visitor.py
Peken-Banyumasan-Company-Profile/backend/app/repositories/: __init__.py  artisan_repo.py  company_profile_repo.py  event_repo.py  karya_repo.py  kolaborator_repo.py  program_repo.py  story_repo.py  visitor_repo.py
Peken-Banyumasan-Company-Profile/backend/app/routers/: company_profile.py  events.py  karya.py  profiles.py  programs.py  stats.py  works.py
Peken-Banyumasan-Company-Profile/backend/app/schemas/: __init__.py  company_profile.py  event_public.py  karya.py  program.py  public_profile.py  public_stats.py  story.py
Peken-Banyumasan-Company-Profile/backend/app/services/: __init__.py  company_profile_service.py  public_event_service.py  public_karya_service.py  public_profile_service.py  (+2 more)
Peken-Banyumasan-Company-Profile/backend/db/: run_seed.py  seed_karya.py  seed_programs.sql  seed_sections.py
Peken-Banyumasan-Company-Profile/backend/tests/: conftest.py  test_company_profile.py  test_cross_app_isolation.py  test_envelope_contract.py  test_events.py  test_health.py  test_karya.py  test_programs.py  test_public_profile.py  test_services_extra.py  test_stats.py
peken_common/: README.md  pyproject.toml
peken_common/peken_common/: __init__.py  envelope.py  errors.py  logging_setup.py  middleware.py
peken_common/peken_common/auth/: __init__.py  dependencies.py  jwt.py  otp_service.py  supabase_admin.py
peken_common/peken_common/constants/: __init__.py  error_messages.py  kategori_usaha.py  subsektor.py
peken_common/peken_common/db/: __init__.py  base_repository.py  engine.py  session.py
peken_common/peken_common/lib/: __init__.py  event_status.py  pagination.py  slugify.py  timezone.py
peken_common/peken_common/schemas/: __init__.py  enums.py  envelope.py  pagination.py
peken_common/peken_common/storage/: __init__.py  supabase_storage.py
peken_common/tests/: test_constants.py  test_envelope.py  test_errors.py  test_event_status.py  test_jwt.py  test_pagination.py  test_slugify.py  test_timezone.py  test_validators.py
(+422 files in other folders)
