[project]
name = "peken-common"
version = "2.3.0"
description = "Shared library for Peken Banyumasan FastAPI backends (envelope, JWT, DB, storage, schemas, constants)"
requires-python = ">=3.12,<3.14"
license = { text = "Proprietary" }
authors = [{ name = "Peken Banyumasan" }]
dependencies = [
    "fastapi>=0.115,<0.120",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "sqlalchemy[asyncio]>=2.0.32,<3.0",
    "asyncpg>=0.29,<1.0",
    "supabase>=2.7,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "structlog>=24.4,<26.0",
    "python-multipart>=0.0.12,<1.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.7,<1.0",
    "mypy>=1.11,<2.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["peken_common"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
